[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Level/Level0.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/MapAlpha.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/Music/BG_1.mp3" type="AudioStream" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -115.63, -13.6604, 0, 0, 0, 0, 278.242, -10.7878, 0, 0, 0, 0, 275.801, 110.841, 0, 0.406784, 0, -0.406784, 187.936, 103.518, 0, 0, 0, 0, 186.937, 22.8451, 0, 0, 0, 0, 94.7822, 20.5346, 0, 0, 0, 0, 96.0337, 82.3872, 0, 0, 0, 0, -52.051, 78.5017 )
}

[node name="Game" type="Node2D"]
position = Vector2( 0.257568, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -136.0 ]
}

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Map" parent="." instance=ExtResource( 4 )]

[node name="TextureButton" type="TextureButton" parent="Map"]
margin_right = 1111.23
margin_bottom = 494.244
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path2D" type="Path2D" parent="." groups=[
"Enemies",
]]
position = Vector2( 207.262, 112.958 )
scale = Vector2( 2.1439, 2.10733 )
curve = SubResource( 1 )

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Spawner" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="start" from="HUD" to="." method="_on_HUD_start"]
[connection signal="pressed" from="Map/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
